--- a/Calculator/src/components/calculator/calculator.scss
+++ b/Calculator/src/components/calculator/calculator.scss
@@ -6,11 +6,9 @@ main {
 }
 .calculator-wrapper {
   width: 380px;
-  border: 1px solid lightgray;
   border-radius: 25px;
   height: 80vh;
-  background-color: #f7f7f7;
-  //   background-color: #2a2b2c;
+  padding: 30px;
 
   position: relative;
   .buttons-wrapper {
@@ -24,61 +22,70 @@ main {
     display: flex;
     gap: 25px;
 
-    background: linear-gradient(
-      45deg,
-      hsla(215, 65%, 84%, 1) 12%,
-      hsla(206, 67%, 91%, 1) 53%,
-      hsla(200, 96%, 78%, 1) 92%
-    );
-    // background: linear-gradient(
-    //   45deg,
-    //   hsla(209, 71%, 14%, 1) 18%,
-    //   hsla(204, 49%, 15%, 1) 31%,
-    //   hsla(200, 100%, 34%, 1) 100%
-    // );
-
     .buttons-right-side {
-      flex: 3;
+      flex: 2.3;
       height: 100%;
       width: 50px;
-      background-color: #aedffeb7;
-      opacity: 0.6;
+      // burda buttonlarin rengi deyismesiiii
+
+      // background-color: #cbeaffc0;
+      // background-color: #12374cc5;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      // gap: 20px;
+      border-radius: 30px;
+      .division-btn,
+      .multiplication-btn,
+      .subtraction-btn,
+      .addition-btn,
+      .calculation-btn {
+        padding: 18px;
+        border-radius: 50%;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 900;
+        background-color: transparent;
+      }
+      .calculation-btn {
+        // burda buttonlarin rengi deyismesiiii
+
+        background-color: #e7f3ffb4;
+      }
     }
     .buttons-left-side {
       flex: 9;
-      display: flex;
-      flex-direction: column;
-      gap: 25px;
+      background-color: transparent;
 
-      .special-buttons-side {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-radius: 30px;
-        background-color: #d6ebf9;
-        padding: 15px;
-        .clear-btn,
-        .change-btn,
-        .percentage-btn {
-          font-weight: 900;
-          font-size: 20px;
-          background-color: #d6ebf9;
-        }
-      }
       .number-buttons-side {
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        align-items: center;
-        gap: 25px;
-        flex-wrap: wrap;
+        background-color: transparent;
+        .special-buttons-side {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          border-radius: 30px;
 
+          padding: 15px;
+          .clear-btn,
+          .change-btn,
+          .percentage-btn {
+            font-weight: 900;
+            font-size: 20px;
+            background-color: transparent;
+          }
+        }
         .box {
           width: 100%;
           display: flex;
           justify-content: center;
           align-items: space-between;
           gap: 25px;
+          background-color: transparent;
         }
         .box-1,
         .box-2,
@@ -93,13 +100,93 @@ main {
         .box-0,
         .box-00 {
           flex: 4;
-          //   padding-left: 20px;
           font-size: 20px;
           font-weight: 900;
           padding: 15px;
           border-radius: 50%;
           text-align: center;
-          background-color: #beddfb;
+          // burda buttonlarin rengi deyismesiiii
+          background-color: #d6e9fc;
+          background-color: #0d2337c2;
+          color: white;
+        }
+      }
+    }
+  }
+
+  .mode-changer {
+    width: 130px;
+    border-radius: 40px;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    background-color: #a9dcfd;
+    .light {
+      padding: 5px 20px 5px 20px;
+      border-radius: 40px;
+    }
+    .dark {
+      padding: 5px 20px 5px 15px;
+      border-radius: 40px;
+      svg {
+        width: 30px;
+        height: 30px;
+        font-weight: normal;
+      }
+    }
+  }
+  .last-opataretions-btn {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 42px;
+    right: 30px;
+  }
+
+  .custom-drawer {
+    width: 65%;
+    height: 32vh;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    border-radius: 25px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 0px;
+    padding: 20px;
+
+    .close-btn {
+      position: fixed;
+      background-color: transparent;
+      svg {
+        width: 20px;
+        height: 20px;
+      }
+    }
+    .clear-history-btn {
+      background-color: transparent;
+      position: fixed;
+      margin-top: 235px;
+      margin-left: 0px;
+    }
+    .history-items {
+      padding-right: 10px;
+      max-height: 230px;
+      background-color: transparent;
+      overflow-y: scroll;
+      scroll-behavior: smooth;
+      .item {
+        text-align: right;
+        margin-bottom: 13px;
+        background-color: transparent;
+        p {
+          margin-bottom: 5px;
+          font-size: 16px;
+          background-color: transparent;
+          color: orangered;
+        }
+        span {
+          font-size: 19px;
+          background-color: transparent;
         }
       }
     }
